--- a/src/style.css
+++ b/src/style.css
@@ -1,43 +1,112 @@
-html{
-    margin: 0%;
-    padding: 0%;
-}
-
 body {
-    background-color: #219EBC;
-    align-items: center;
-    text-align: center;
-}
-
-h1 {
-    color: #fb8500;
-    font-size: 50px;
-}
-
-.cardbox div {
-    display: flex;
-    flex-wrap: wrap;
-    position: relative;
+    margin: 0;
+    font-family: Arial; 
     
 }
 
-figure {
-    background-color: black;
+.menu {
+    background:linear-gradient(180deg, #007690 0%, rgba(255, 255, 255, 0) 100%);
+    position: absolute;
+    width: 300px;
+    height: 800px;
+    left: 0px;
+    top: 0px;
+
+    
+}
+.menu button {
     width: 100px;
-    height: 120px;
-    color: #fb8500;
-    font-size: 14px;
-    font-weight: bold;
-    text-transform: uppercase;
-    padding: 10px;
-    border-style: solid;
-    border-color: yellow;
-    border-width: 5px;    
+    height: 35px;
+    margin-top: 100px;
+    margin-left: 50px;
+    background-color: #004A5A;
+    font-size: 20px;
+    color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0px 5px #00000080;
+}
+.menu img {
+    width: 165px;
+    height: 170px;
+    left: 20px;
+    top: 500px;
+    position: absolute;
+
 
 }
-
-img {
-    width: 90px;
-    height: 90px;
+.menu footer{
+    position: absolute;
+    background-color: #004A5A;
+    width: 300px;
+    height: 70px;
+    left: 0px;
+    top: 100%;
     
+}
+.menu footer h6 {
+    font-size: 12px;
+    color: #ffffff;
+    margin-left: 20px;
+}
+
+.fondo {
+    position: absolute;
+    margin-left: 200px;
+    background-color: #00272f ;
+    
+    width: 85%;
+    height: 870px;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    align-content: center;
+    
+}
+.fondo p {
+    margin-top: 25px;
+    text-align: center;
+    font-size: 70px;
+    color:  #ffffff;
+    border: 2px;
+    border-color: #F06868;
+    text-shadow: 0px 3px #00000080;
+    font-weight: bold;
+    letter-spacing: 10px;
+}    
+.fondo div{
+    align-items: center;
+    margin-left: 30px;
+}
+.cardboxb figure {
+    float: left;
+    background-color: #E2C851;
+    width: 120px;
+    height: 150px;
+    margin: 15px;
+    border-radius: 20px;
+    padding: 10px;
+    align-content: center;
+    box-shadow: 0px 5px #00000080;
+    
+}
+.cardboxb img {
+    width: 110px;
+    height: 130px;
+}
+.cardboxf figure {
+    background-repeat: repeat;
+    float: left;
+    background-color: #E2C851;
+    width: 120px;
+    height: 150px;
+    margin: 15px;
+    border-radius: 20px;
+    padding: 10px;
+    align-content: center;
+    box-shadow: 0px 5px #00000080;
+    
+}
+.cardboxf img {
+    background-repeat: repeat;
+    width: 110px;
+    height: 130px;
 }
