--- a/src/style.css
+++ b/src/style.css
@@ -1,112 +1,364 @@
+/*diseño mobile (max-width: 480px)*/
 body {
+    background: linear-gradient(180deg, #00768F 30.21%, #FFFFFF 100%);
+    background-repeat: no-repeat;
     margin: 0;
-    font-family: Arial; 
-    
+    font-family: 'Franklin Gothic';
+}
+
+header {
+    padding: 10px;
+    font-size: 35px;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 0 5px 5px #00000080;
+    letter-spacing: 3px;
 }
 
 .menu {
-    background:linear-gradient(180deg, #007690 0%, rgba(255, 255, 255, 0) 100%);
-    position: absolute;
-    width: 300px;
-    height: 800px;
-    left: 0px;
-    top: 0px;
-
-    
-}
-.menu button {
-    width: 100px;
-    height: 35px;
-    margin-top: 100px;
-    margin-left: 50px;
-    background-color: #004A5A;
-    font-size: 20px;
-    color: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0px 5px #00000080;
-}
-.menu img {
-    width: 165px;
-    height: 170px;
-    left: 20px;
-    top: 500px;
-    position: absolute;
-
-
-}
-.menu footer{
-    position: absolute;
-    background-color: #004A5A;
-    width: 300px;
-    height: 70px;
-    left: 0px;
-    top: 100%;
-    
-}
-.menu footer h6 {
     font-size: 12px;
-    color: #ffffff;
-    margin-left: 20px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
-.fondo {
-    position: absolute;
-    margin-left: 200px;
-    background-color: #00272f ;
-    
-    width: 85%;
-    height: 870px;
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 50px;
-    align-content: center;
-    
+.menu button {
+    background-color: #002027;
+    width: 78px;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 2px #00000080;
+    color: #fff;
 }
-.fondo p {
-    margin-top: 25px;
+
+.menu p {
+    background-color: #002027;
+    width: 70px;
+    padding: 8px;
+    border-radius: 5px;
+    box-shadow: 0 2px 2px #00000080;
     text-align: center;
-    font-size: 70px;
-    color:  #ffffff;
-    border: 2px;
-    border-color: #F06868;
-    text-shadow: 0px 3px #00000080;
-    font-weight: bold;
-    letter-spacing: 10px;
-}    
-.fondo div{
-    align-items: center;
-    margin-left: 30px;
 }
-.cardboxb figure {
-    float: left;
-    background-color: #E2C851;
-    width: 120px;
-    height: 150px;
-    margin: 15px;
+
+.menu img {
+    width: 0.1px;
+    height: 0.1px;
+}
+
+.containCard div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.containCard div p {
+    font-size: 1px;
+    color: transparent;
+}
+
+.containCard figure {
+    background: #E2C851;
+    width: 60px;
+    height: 80px;
+    margin: 10px;
     border-radius: 20px;
     padding: 10px;
-    align-content: center;
-    box-shadow: 0px 5px #00000080;
-    
+    box-shadow: 0px 3px #00000080;
+    position: relative;
 }
-.cardboxb img {
-    width: 110px;
-    height: 130px;
+
+.containCard img {
+    position: absolute;
+    width: 60px;
+    height: 80px;
 }
-.cardboxf figure {
-    background-repeat: repeat;
-    float: left;
-    background-color: #E2C851;
-    width: 120px;
-    height: 150px;
-    margin: 15px;
-    border-radius: 20px;
-    padding: 10px;
-    align-content: center;
-    box-shadow: 0px 5px #00000080;
-    
+
+.decor {
+    text-align: center;
 }
-.cardboxf img {
-    background-repeat: repeat;
-    width: 110px;
-    height: 130px;
+
+.decor img {
+    margin-top: 20px;
+    width: 100px;
+    height: 100px;
+}
+
+footer {
+    margin-top: 20px;
+    background: #002027;
+    padding: 5px;
+    text-align: center;
+    font-size: 10px;
+    color: #ffffff;
+}
+
+a {
+    color: #E2C851;
+}
+
+@media screen and (min-width: 481px) and (max-width: 766px) {
+    header {
+        display: none;
+    }
+
+    .menu {
+        position: absolute;
+        margin-top: 100px;
+        width: 120px;
+        height: 100%;
+        align-items: center;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+    }
+
+    .menu button {
+        width: 80px;
+        padding: 8px;
+        font-size: 15px;
+        margin-top: 80px;
+        margin-bottom: 50px;
+        border-radius: 8px;
+        box-shadow: 0px 5px #00000080;
+    }
+
+    .menu p {
+        width: 60px;
+        padding: 7px;
+        font-size: 15px;
+    }
+
+    .menu img {
+        margin-top: 80px;
+        width: 100px;
+        height: 100px;
+    }
+
+    .containCard {
+        margin-left: 120px;
+        border-top-left-radius: 30px;
+        border-bottom-left-radius: 30px;
+        background: #002027;
+        padding: 10px;
+    }
+
+    .containCard div p {
+        font-size: 40px;
+        color: #fff;
+        margin: 0 0 15px 0;
+    }
+
+    .containCard figure {
+        background: #E2C851;
+        width: 70px;
+        height: 100px;
+        margin: 15px;
+        border-radius: 20px;
+        padding: 10px;
+        box-shadow: 0px 3px #00000080;
+        position: relative;
+    }
+
+    .containCard img {
+        position: absolute;
+        width: 70px;
+        height: 100px;
+    }
+
+    .decor {
+        display: none;
+    }
+
+    footer {
+        background: #002027;
+        padding: 10px;
+        text-align: center;
+        font-size: 15px;
+        color: #ffffff;
+    }
+
+    a {
+        color: #E2C851;
+    }
+}
+
+
+@media screen and (min-width: 767px) and (max-width: 949px) {
+    header {
+        display: none;
+    }
+
+    .menu {
+        position: absolute;
+        margin-top: 100px;
+        width: 150px;
+        height: 100%;
+        align-items: center;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+    }
+
+    .menu button {
+        width: 100px;
+        padding: 10px;
+        font-size: 20px;
+        margin-top: 150px;
+        margin-bottom: 50px;
+        border-radius: 8px;
+        box-shadow: 0px 5px #00000080;
+    }
+
+    .menu p {
+        width: 80px;
+        padding: 10px;
+        font-size: 18px;
+        border-radius: 8px;
+        box-shadow: 0px 5px #00000080;
+        margin-bottom: 50px;
+    }
+
+    .menu img {
+        margin-top: 80px;
+        width: 150px;
+        height: 150px;
+    }
+
+    .containCard {
+        margin-left: 150px;
+        border-top-left-radius: 50px;
+        border-bottom-left-radius: 50px;
+        background: #002027;
+        padding: 20px;
+    }
+
+    .containCard div p {
+        font-size: 60px;
+        color: #fff;
+        margin: 0 0 15px 0;
+    }
+
+    .containCard figure {
+        background: #E2C851;
+        width: 90px;
+        height: 120px;
+        border-radius: 20px;
+        margin: 15px;
+        padding: 10px;
+        box-shadow: 0px 3px #00000080;
+        position: relative;
+    }
+
+    .containCard img {
+        position: absolute;
+        width: 90px;
+        height: 120px;
+    }
+
+    .decor {
+        display: none;
+    }
+
+    footer {
+        background: #002027;
+        padding: 10px;
+        text-align: center;
+        font-size: 15px;
+        color: #ffffff;
+    }
+
+    a {
+        color: #E2C851;
+    }
+}
+
+@media screen and (min-width: 950px) {
+    header {
+        display: none;
+    }
+
+    .menu {
+        position: absolute;
+        margin-top: 50px;
+        width: 200px;
+        height: 100%;
+        align-items: center;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+    }
+
+    .menu button {
+        width: 125px;
+        padding: 10px;
+        font-size: 25px;
+        margin-top: 100px;
+        margin-bottom: 50px;
+        border-radius: 8px;
+        box-shadow: 0px 5px #00000080;
+    }
+
+    .menu p {
+        width: 100px;
+        padding: 10px;
+        font-size: 20px;
+        border-radius: 8px;
+        box-shadow: 0px 5px #00000080;
+        margin-bottom: 50px;
+    }
+
+    .menu img {
+
+        width: 180px;
+        height: 180px;
+    }
+
+    .containCard {
+        margin-left: 200px;
+        border-top-left-radius: 50px;
+        border-bottom-left-radius: 50px;
+        background: #002027;
+        padding: 20px;
+    }
+
+    .containCard div p {
+        font-size: 80px;
+        color: #fff;
+        margin: 0 0 20px 0;
+    }
+
+    .containCard figure {
+        background: #E2C851;
+        width: 120px;
+        height: 150px;
+        border-radius: 20px;
+        margin: 20px;
+        padding: 10px;
+        box-shadow: 0px 3px #00000080;
+        position: relative;
+    }
+
+    .containCard img {
+        position: absolute;
+        width: 120px;
+        height: 150px;
+    }
+
+    .decor {
+        display: none;
+    }
+
+    footer {
+        background: #002027;
+        padding: 10px;
+        text-align: center;
+        font-size: 18px;
+        color: #ffffff;
+    }
+
+    a {
+        color: #E2C851;
+    }
 }
